<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTheme"
    tools:context="com.atm.product.neoatm.activities.MenuActivity">

    <TextView
        style="@style/App_TextviewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/txt_welcome" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/dp_40"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_check_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_check_balance" />

        <Button
            android:id="@+id/btn_withdraw_money"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_withdraw_money" />

    </LinearLayout>
</RelativeLayout>
